feat: Add multi-environment database safeguards
- Create separate test database (task_blaster_test) isolated from dev
- Add DATABASE_URL_TEST environment variable for test database
- Implement 6-layer safety guard system:
  * NODE_ENV validation
  * DATABASE_URL_TEST validation
  * Runtime database name verification
  * Startup validation in test setup
  * Per-operation validation in test helpers
  * Seed script protection for stage/prod

- Update database connection to use DATABASE_URL_TEST when NODE_ENV=test
- Add validateTestEnvironment() function in test helpers
- Add safety checks to seed scripts to block stage/prod databases
- Generate new migration with access_token column
- Update all documentation (README.md, WARP.md, api/__tests__/README.md)
- Update .env.example with DATABASE_URL_TEST

Addresses GitHub security issue: Test helpers previously deleted data without
environment validation. All 15 tests passing with new safeguards.

Test command: set -a && source .env && set +a && NODE_ENV=test npm run test

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ dist
 .env
 .env.local
 .env.*.local
+api/.env
+api/.env.local
+# Keep example file tracked
+!api/.env.example
 
 # Editor directories and files
 .vscode/*
