--- a/api/.env.example
+++ b/api/.env.example
@@ -1,5 +1,12 @@
 # Database Configuration
-DATABASE_URL=postgres://postgres:your_secure_password@localhost:5433/task_blaster_db
+
+# Developer's working database - for manual testing, exploration, or troubleshooting
+# You may point this at dev, stage, or even prod (read-only troubleshooting)
+DATABASE_URL=postgres://postgres:your_secure_password@localhost:5433/task_blaster_dev
+
+# Test database - used ONLY by automated test suite (npm run test)
+# This database is cleared and re-seeded by tests - do not use for manual work
+DATABASE_URL_TEST=postgres://postgres:your_secure_password@localhost:5433/task_blaster_test
 
 # Application Configuration
 NODE_ENV=development
